// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OurPledge
    actions={Object {}}
    calloutImage={
        Object {
            "fields": Object {
              "file": Object {
                "contentType": "foo",
                "details": Object {
                  "image": Object {
                    "height": 0,
                    "width": 0,
                  },
                  "size": 0,
                },
                "fileName": "foo",
                "url": "foo",
              },
              "title": "foo",
            },
            "sys": Object {
              "createdAt": "foo",
              "environment": Object {
                "sys": Object {
                  "id": "foo",
                  "linkType": "foo",
                  "type": "foo",
                },
              },
              "id": "foo",
              "locale": "foo",
              "revision": 0,
              "space": Object {
                "sys": Object {
                  "id": "foo",
                  "linkType": "foo",
                  "type": "foo",
                },
              },
              "type": "foo",
              "updatedAt": "foo",
            },
          }
    }
    ourPledgeOverlayIsOpen={false}
    overlayContentImage={
        Object {
            "fields": Object {
              "file": Object {
                "contentType": "foo",
                "details": Object {
                  "image": Object {
                    "height": 0,
                    "width": 0,
                  },
                  "size": 0,
                },
                "fileName": "foo",
                "url": "foo",
              },
              "title": "foo",
            },
            "sys": Object {
              "createdAt": "foo",
              "environment": Object {
                "sys": Object {
                  "id": "foo",
                  "linkType": "foo",
                  "type": "foo",
                },
              },
              "id": "foo",
              "locale": "foo",
              "revision": 0,
              "space": Object {
                "sys": Object {
                  "id": "foo",
                  "linkType": "foo",
                  "type": "foo",
                },
              },
              "type": "foo",
              "updatedAt": "foo",
            },
          }
    }
    shippingInformation="foo"
    shippingPledge="foo"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Image
          alt="Our pledge icon"
          bg={false}
          className="icon z-1"
          onImgLoad={[Function]}
          src="foo?w=200&fm=png&q=90"
          style={Object {}}
/>,
        <div
          className="bg-varden flex items-center w100"
>
          <div
                    className="flex col col-8 md-col-9"
          >
                    <p
                              className="col col-12 md-col-5 px2 block-subheadline carter nowrap"
                    >
                              Our Pledge
                    </p>
                    <p
                              className="tout col col-12 md-col-7 px2 flex uppercase semi-bold flex"
                    >
                              Ice cream arrives fresh delicious, and frozen
                    </p>
          </div>
          <div
                    className="col col-4 md-col-3 px2 right-align flex flex-column justify-end"
          >
                    <div
                              className="ml-auto"
                    >
                              <Button
                                        className="uppercase info-text-wide bold nowrap text-madison-blue"
                                        color="white-denim"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="More Info"
                                        onClick={[Function]}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="style-none"
                              />
                    </div>
          </div>
</div>,
        <OurPledgeOverlay
          closeOurPledgeOverlay={[Function]}
          ourPledgeOverlayIsOpen={false}
          overlayContentImage={
                    Object {
                              "fields": Object {
                                "file": Object {
                                  "contentType": "foo",
                                  "details": Object {
                                    "image": Object {
                                      "height": 0,
                                      "width": 0,
                                    },
                                    "size": 0,
                                  },
                                  "fileName": "foo",
                                  "url": "foo",
                                },
                                "title": "foo",
                              },
                              "sys": Object {
                                "createdAt": "foo",
                                "environment": Object {
                                  "sys": Object {
                                    "id": "foo",
                                    "linkType": "foo",
                                    "type": "foo",
                                  },
                                },
                                "id": "foo",
                                "locale": "foo",
                                "revision": 0,
                                "space": Object {
                                  "sys": Object {
                                    "id": "foo",
                                    "linkType": "foo",
                                    "type": "foo",
                                  },
                                },
                                "type": "foo",
                                "updatedAt": "foo",
                              },
                            }
          }
          shippingInformation="foo"
          shippingPledge="foo"
/>,
      ],
      "className": "col-12 mx-auto mt3 flex flex-column items-center",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "alt": "Our pledge icon",
          "bg": false,
          "children": null,
          "className": "icon z-1",
          "onImgLoad": [Function],
          "src": "foo?w=200&fm=png&q=90",
          "style": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="flex col col-8 md-col-9"
>
              <p
                            className="col col-12 md-col-5 px2 block-subheadline carter nowrap"
              >
                            Our Pledge
              </p>
              <p
                            className="tout col col-12 md-col-7 px2 flex uppercase semi-bold flex"
              >
                            Ice cream arrives fresh delicious, and frozen
              </p>
</div>,
            <div
              className="col col-4 md-col-3 px2 right-align flex flex-column justify-end"
>
              <div
                            className="ml-auto"
              >
                            <Button
                                          className="uppercase info-text-wide bold nowrap text-madison-blue"
                                          color="white-denim"
                                          disabled={false}
                                          fullWidth={false}
                                          hover="shadow"
                                          label="More Info"
                                          onClick={[Function]}
                                          shadow={false}
                                          to=""
                                          type="button"
                                          variant="style-none"
                            />
              </div>
</div>,
          ],
          "className": "bg-varden flex items-center w100",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="col col-12 md-col-5 px2 block-subheadline carter nowrap"
>
                  Our Pledge
</p>,
                <p
                  className="tout col col-12 md-col-7 px2 flex uppercase semi-bold flex"
>
                  Ice cream arrives fresh delicious, and frozen
</p>,
              ],
              "className": "flex col col-8 md-col-9",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Our Pledge",
                  "className": "col col-12 md-col-5 px2 block-subheadline carter nowrap",
                },
                "ref": null,
                "rendered": "Our Pledge",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Ice cream arrives fresh delicious, and frozen",
                  "className": "tout col col-12 md-col-7 px2 flex uppercase semi-bold flex",
                },
                "ref": null,
                "rendered": "Ice cream arrives fresh delicious, and frozen",
                "type": "p",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="ml-auto"
>
                <Button
                                className="uppercase info-text-wide bold nowrap text-madison-blue"
                                color="white-denim"
                                disabled={false}
                                fullWidth={false}
                                hover="shadow"
                                label="More Info"
                                onClick={[Function]}
                                shadow={false}
                                to=""
                                type="button"
                                variant="style-none"
                />
</div>,
              "className": "col col-4 md-col-3 px2 right-align flex flex-column justify-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Button
                  className="uppercase info-text-wide bold nowrap text-madison-blue"
                  color="white-denim"
                  disabled={false}
                  fullWidth={false}
                  hover="shadow"
                  label="More Info"
                  onClick={[Function]}
                  shadow={false}
                  to=""
                  type="button"
                  variant="style-none"
/>,
                "className": "ml-auto",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": null,
                  "className": "uppercase info-text-wide bold nowrap text-madison-blue",
                  "color": "white-denim",
                  "disabled": false,
                  "fullWidth": false,
                  "hover": "shadow",
                  "label": "More Info",
                  "onClick": [Function],
                  "shadow": false,
                  "to": "",
                  "type": "button",
                  "variant": "style-none",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "closeOurPledgeOverlay": [Function],
          "ourPledgeOverlayIsOpen": false,
          "overlayContentImage": Object {
            "fields": Object {
              "file": Object {
                "contentType": "foo",
                "details": Object {
                  "image": Object {
                    "height": 0,
                    "width": 0,
                  },
                  "size": 0,
                },
                "fileName": "foo",
                "url": "foo",
              },
              "title": "foo",
            },
            "sys": Object {
              "createdAt": "foo",
              "environment": Object {
                "sys": Object {
                  "id": "foo",
                  "linkType": "foo",
                  "type": "foo",
                },
              },
              "id": "foo",
              "locale": "foo",
              "revision": 0,
              "space": Object {
                "sys": Object {
                  "id": "foo",
                  "linkType": "foo",
                  "type": "foo",
                },
              },
              "type": "foo",
              "updatedAt": "foo",
            },
          },
          "shippingInformation": "foo",
          "shippingPledge": "foo",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Image
            alt="Our pledge icon"
            bg={false}
            className="icon z-1"
            onImgLoad={[Function]}
            src="foo?w=200&fm=png&q=90"
            style={Object {}}
/>,
          <div
            className="bg-varden flex items-center w100"
>
            <div
                        className="flex col col-8 md-col-9"
            >
                        <p
                                    className="col col-12 md-col-5 px2 block-subheadline carter nowrap"
                        >
                                    Our Pledge
                        </p>
                        <p
                                    className="tout col col-12 md-col-7 px2 flex uppercase semi-bold flex"
                        >
                                    Ice cream arrives fresh delicious, and frozen
                        </p>
            </div>
            <div
                        className="col col-4 md-col-3 px2 right-align flex flex-column justify-end"
            >
                        <div
                                    className="ml-auto"
                        >
                                    <Button
                                                className="uppercase info-text-wide bold nowrap text-madison-blue"
                                                color="white-denim"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="More Info"
                                                onClick={[Function]}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="style-none"
                                    />
                        </div>
            </div>
</div>,
          <OurPledgeOverlay
            closeOurPledgeOverlay={[Function]}
            ourPledgeOverlayIsOpen={false}
            overlayContentImage={
                        Object {
                                    "fields": Object {
                                      "file": Object {
                                        "contentType": "foo",
                                        "details": Object {
                                          "image": Object {
                                            "height": 0,
                                            "width": 0,
                                          },
                                          "size": 0,
                                        },
                                        "fileName": "foo",
                                        "url": "foo",
                                      },
                                      "title": "foo",
                                    },
                                    "sys": Object {
                                      "createdAt": "foo",
                                      "environment": Object {
                                        "sys": Object {
                                          "id": "foo",
                                          "linkType": "foo",
                                          "type": "foo",
                                        },
                                      },
                                      "id": "foo",
                                      "locale": "foo",
                                      "revision": 0,
                                      "space": Object {
                                        "sys": Object {
                                          "id": "foo",
                                          "linkType": "foo",
                                          "type": "foo",
                                        },
                                      },
                                      "type": "foo",
                                      "updatedAt": "foo",
                                    },
                                  }
            }
            shippingInformation="foo"
            shippingPledge="foo"
/>,
        ],
        "className": "col-12 mx-auto mt3 flex flex-column items-center",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "alt": "Our pledge icon",
            "bg": false,
            "children": null,
            "className": "icon z-1",
            "onImgLoad": [Function],
            "src": "foo?w=200&fm=png&q=90",
            "style": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="flex col col-8 md-col-9"
>
                <p
                                className="col col-12 md-col-5 px2 block-subheadline carter nowrap"
                >
                                Our Pledge
                </p>
                <p
                                className="tout col col-12 md-col-7 px2 flex uppercase semi-bold flex"
                >
                                Ice cream arrives fresh delicious, and frozen
                </p>
</div>,
              <div
                className="col col-4 md-col-3 px2 right-align flex flex-column justify-end"
>
                <div
                                className="ml-auto"
                >
                                <Button
                                                className="uppercase info-text-wide bold nowrap text-madison-blue"
                                                color="white-denim"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="More Info"
                                                onClick={[Function]}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="style-none"
                                />
                </div>
</div>,
            ],
            "className": "bg-varden flex items-center w100",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="col col-12 md-col-5 px2 block-subheadline carter nowrap"
>
                    Our Pledge
</p>,
                  <p
                    className="tout col col-12 md-col-7 px2 flex uppercase semi-bold flex"
>
                    Ice cream arrives fresh delicious, and frozen
</p>,
                ],
                "className": "flex col col-8 md-col-9",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Our Pledge",
                    "className": "col col-12 md-col-5 px2 block-subheadline carter nowrap",
                  },
                  "ref": null,
                  "rendered": "Our Pledge",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Ice cream arrives fresh delicious, and frozen",
                    "className": "tout col col-12 md-col-7 px2 flex uppercase semi-bold flex",
                  },
                  "ref": null,
                  "rendered": "Ice cream arrives fresh delicious, and frozen",
                  "type": "p",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="ml-auto"
>
                  <Button
                                    className="uppercase info-text-wide bold nowrap text-madison-blue"
                                    color="white-denim"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="More Info"
                                    onClick={[Function]}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="style-none"
                  />
</div>,
                "className": "col col-4 md-col-3 px2 right-align flex flex-column justify-end",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Button
                    className="uppercase info-text-wide bold nowrap text-madison-blue"
                    color="white-denim"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label="More Info"
                    onClick={[Function]}
                    shadow={false}
                    to=""
                    type="button"
                    variant="style-none"
/>,
                  "className": "ml-auto",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": null,
                    "className": "uppercase info-text-wide bold nowrap text-madison-blue",
                    "color": "white-denim",
                    "disabled": false,
                    "fullWidth": false,
                    "hover": "shadow",
                    "label": "More Info",
                    "onClick": [Function],
                    "shadow": false,
                    "to": "",
                    "type": "button",
                    "variant": "style-none",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "closeOurPledgeOverlay": [Function],
            "ourPledgeOverlayIsOpen": false,
            "overlayContentImage": Object {
              "fields": Object {
                "file": Object {
                  "contentType": "foo",
                  "details": Object {
                    "image": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "size": 0,
                  },
                  "fileName": "foo",
                  "url": "foo",
                },
                "title": "foo",
              },
              "sys": Object {
                "createdAt": "foo",
                "environment": Object {
                  "sys": Object {
                    "id": "foo",
                    "linkType": "foo",
                    "type": "foo",
                  },
                },
                "id": "foo",
                "locale": "foo",
                "revision": 0,
                "space": Object {
                  "sys": Object {
                    "id": "foo",
                    "linkType": "foo",
                    "type": "foo",
                  },
                },
                "type": "foo",
                "updatedAt": "foo",
              },
            },
            "shippingInformation": "foo",
            "shippingPledge": "foo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OurPledge
    actions={
        Object {
            "closeOurPledge": [Function],
            "openOurPledge": [Function],
          }
    }
    calloutImage={
        Object {
            "fields": Object {
              "file": Object {
                "url": "",
              },
              "title": "",
            },
            "sys": Object {
              "id": "",
            },
          }
    }
    ourPledgeOverlayIsOpen={false}
    overlayContentImage={Object {}}
    shippingInformation=""
    shippingPledge=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Image
          alt="Our pledge icon"
          bg={false}
          className="icon z-1"
          onImgLoad={[Function]}
          src="?w=200&fm=png&q=90"
          style={Object {}}
/>,
        <div
          className="bg-varden flex items-center w100"
>
          <div
                    className="flex col col-8 md-col-9"
          >
                    <p
                              className="col col-12 md-col-5 px2 block-subheadline carter nowrap"
                    >
                              Our Pledge
                    </p>
                    <p
                              className="tout col col-12 md-col-7 px2 flex uppercase semi-bold flex"
                    >
                              Ice cream arrives fresh delicious, and frozen
                    </p>
          </div>
          <div
                    className="col col-4 md-col-3 px2 right-align flex flex-column justify-end"
          >
                    <div
                              className="ml-auto"
                    >
                              <Button
                                        className="uppercase info-text-wide bold nowrap text-madison-blue"
                                        color="white-denim"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="More Info"
                                        onClick={[Function]}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="style-none"
                              />
                    </div>
          </div>
</div>,
        <OurPledgeOverlay
          closeOurPledgeOverlay={[Function]}
          ourPledgeOverlayIsOpen={false}
          overlayContentImage={Object {}}
          shippingInformation=""
          shippingPledge=""
/>,
      ],
      "className": "col-12 mx-auto mt3 flex flex-column items-center",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "alt": "Our pledge icon",
          "bg": false,
          "children": null,
          "className": "icon z-1",
          "onImgLoad": [Function],
          "src": "?w=200&fm=png&q=90",
          "style": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="flex col col-8 md-col-9"
>
              <p
                            className="col col-12 md-col-5 px2 block-subheadline carter nowrap"
              >
                            Our Pledge
              </p>
              <p
                            className="tout col col-12 md-col-7 px2 flex uppercase semi-bold flex"
              >
                            Ice cream arrives fresh delicious, and frozen
              </p>
</div>,
            <div
              className="col col-4 md-col-3 px2 right-align flex flex-column justify-end"
>
              <div
                            className="ml-auto"
              >
                            <Button
                                          className="uppercase info-text-wide bold nowrap text-madison-blue"
                                          color="white-denim"
                                          disabled={false}
                                          fullWidth={false}
                                          hover="shadow"
                                          label="More Info"
                                          onClick={[Function]}
                                          shadow={false}
                                          to=""
                                          type="button"
                                          variant="style-none"
                            />
              </div>
</div>,
          ],
          "className": "bg-varden flex items-center w100",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="col col-12 md-col-5 px2 block-subheadline carter nowrap"
>
                  Our Pledge
</p>,
                <p
                  className="tout col col-12 md-col-7 px2 flex uppercase semi-bold flex"
>
                  Ice cream arrives fresh delicious, and frozen
</p>,
              ],
              "className": "flex col col-8 md-col-9",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Our Pledge",
                  "className": "col col-12 md-col-5 px2 block-subheadline carter nowrap",
                },
                "ref": null,
                "rendered": "Our Pledge",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Ice cream arrives fresh delicious, and frozen",
                  "className": "tout col col-12 md-col-7 px2 flex uppercase semi-bold flex",
                },
                "ref": null,
                "rendered": "Ice cream arrives fresh delicious, and frozen",
                "type": "p",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="ml-auto"
>
                <Button
                                className="uppercase info-text-wide bold nowrap text-madison-blue"
                                color="white-denim"
                                disabled={false}
                                fullWidth={false}
                                hover="shadow"
                                label="More Info"
                                onClick={[Function]}
                                shadow={false}
                                to=""
                                type="button"
                                variant="style-none"
                />
</div>,
              "className": "col col-4 md-col-3 px2 right-align flex flex-column justify-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Button
                  className="uppercase info-text-wide bold nowrap text-madison-blue"
                  color="white-denim"
                  disabled={false}
                  fullWidth={false}
                  hover="shadow"
                  label="More Info"
                  onClick={[Function]}
                  shadow={false}
                  to=""
                  type="button"
                  variant="style-none"
/>,
                "className": "ml-auto",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": null,
                  "className": "uppercase info-text-wide bold nowrap text-madison-blue",
                  "color": "white-denim",
                  "disabled": false,
                  "fullWidth": false,
                  "hover": "shadow",
                  "label": "More Info",
                  "onClick": [Function],
                  "shadow": false,
                  "to": "",
                  "type": "button",
                  "variant": "style-none",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "closeOurPledgeOverlay": [Function],
          "ourPledgeOverlayIsOpen": false,
          "overlayContentImage": Object {},
          "shippingInformation": "",
          "shippingPledge": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Image
            alt="Our pledge icon"
            bg={false}
            className="icon z-1"
            onImgLoad={[Function]}
            src="?w=200&fm=png&q=90"
            style={Object {}}
/>,
          <div
            className="bg-varden flex items-center w100"
>
            <div
                        className="flex col col-8 md-col-9"
            >
                        <p
                                    className="col col-12 md-col-5 px2 block-subheadline carter nowrap"
                        >
                                    Our Pledge
                        </p>
                        <p
                                    className="tout col col-12 md-col-7 px2 flex uppercase semi-bold flex"
                        >
                                    Ice cream arrives fresh delicious, and frozen
                        </p>
            </div>
            <div
                        className="col col-4 md-col-3 px2 right-align flex flex-column justify-end"
            >
                        <div
                                    className="ml-auto"
                        >
                                    <Button
                                                className="uppercase info-text-wide bold nowrap text-madison-blue"
                                                color="white-denim"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="More Info"
                                                onClick={[Function]}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="style-none"
                                    />
                        </div>
            </div>
</div>,
          <OurPledgeOverlay
            closeOurPledgeOverlay={[Function]}
            ourPledgeOverlayIsOpen={false}
            overlayContentImage={Object {}}
            shippingInformation=""
            shippingPledge=""
/>,
        ],
        "className": "col-12 mx-auto mt3 flex flex-column items-center",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "alt": "Our pledge icon",
            "bg": false,
            "children": null,
            "className": "icon z-1",
            "onImgLoad": [Function],
            "src": "?w=200&fm=png&q=90",
            "style": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="flex col col-8 md-col-9"
>
                <p
                                className="col col-12 md-col-5 px2 block-subheadline carter nowrap"
                >
                                Our Pledge
                </p>
                <p
                                className="tout col col-12 md-col-7 px2 flex uppercase semi-bold flex"
                >
                                Ice cream arrives fresh delicious, and frozen
                </p>
</div>,
              <div
                className="col col-4 md-col-3 px2 right-align flex flex-column justify-end"
>
                <div
                                className="ml-auto"
                >
                                <Button
                                                className="uppercase info-text-wide bold nowrap text-madison-blue"
                                                color="white-denim"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="More Info"
                                                onClick={[Function]}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="style-none"
                                />
                </div>
</div>,
            ],
            "className": "bg-varden flex items-center w100",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="col col-12 md-col-5 px2 block-subheadline carter nowrap"
>
                    Our Pledge
</p>,
                  <p
                    className="tout col col-12 md-col-7 px2 flex uppercase semi-bold flex"
>
                    Ice cream arrives fresh delicious, and frozen
</p>,
                ],
                "className": "flex col col-8 md-col-9",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Our Pledge",
                    "className": "col col-12 md-col-5 px2 block-subheadline carter nowrap",
                  },
                  "ref": null,
                  "rendered": "Our Pledge",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Ice cream arrives fresh delicious, and frozen",
                    "className": "tout col col-12 md-col-7 px2 flex uppercase semi-bold flex",
                  },
                  "ref": null,
                  "rendered": "Ice cream arrives fresh delicious, and frozen",
                  "type": "p",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="ml-auto"
>
                  <Button
                                    className="uppercase info-text-wide bold nowrap text-madison-blue"
                                    color="white-denim"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="More Info"
                                    onClick={[Function]}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="style-none"
                  />
</div>,
                "className": "col col-4 md-col-3 px2 right-align flex flex-column justify-end",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Button
                    className="uppercase info-text-wide bold nowrap text-madison-blue"
                    color="white-denim"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label="More Info"
                    onClick={[Function]}
                    shadow={false}
                    to=""
                    type="button"
                    variant="style-none"
/>,
                  "className": "ml-auto",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": null,
                    "className": "uppercase info-text-wide bold nowrap text-madison-blue",
                    "color": "white-denim",
                    "disabled": false,
                    "fullWidth": false,
                    "hover": "shadow",
                    "label": "More Info",
                    "onClick": [Function],
                    "shadow": false,
                    "to": "",
                    "type": "button",
                    "variant": "style-none",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "closeOurPledgeOverlay": [Function],
            "ourPledgeOverlayIsOpen": false,
            "overlayContentImage": Object {},
            "shippingInformation": "",
            "shippingPledge": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
